# RasPin_Pinball

./: .copilot-instructions.md  .gitattributes  .gitignore  3DRenderplan.txt  ARCHITECTURE.md  AUDIO_FIX_IMPLEMENTATION.md  AUDIO_FIX_PROPOSAL.md  AUDIO_POLISH_V5_SUMMARY.md  AUDIO_STREAMING_V4_SUMMARY.md  AUDIO_STREAM_REDESIGN.md  AUDIO_SYNC_FIX_V2.md  AUDIO_SYNC_FIX_V3_FINAL.md  AUDIO_VIDEO_SYNC_FINAL.md  CMAKE_README.md  Gameplay.txt  HowToBuild.md  LED_SEQUENCE_FIXES.md  LED_SEQUENCE_RACE_CONDITION_FIXES.md  LICENSE  PBSound_Integration_Summary.md  PBSound_README.md  PR_SUMMARY.md  README.md  TODO.txt  UsersGuide.md  _codeql_detected_source_root  console.txt  io_definitions.json
.github/: CODEOWNERS
CMake/: CMAKE_README.md  CMakeCache.txt  CMakeLists.txt  build_release_raspi.sh  clean_raspi.sh  cmake_install.cmake
RasPi_CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  build_release_raspi.sh  clean_raspi.sh
documentation/: DoDTable.md  FontGen_Guide.md  Game_Creation_API.md  HowToBuild.md  IO_Processing_API.md  LED_Control_API.md  Mode_System_Guide.md  NeoPixel_Instrumentation.md  NeoPixel_Timing_Methods.md  PB3D_API.md  PBDevice_API.md  PBEngine_API.md  PBVideo_README.md  Platform_Init_API.md  RasPin_Overview.md  SDL2_WINDOWS_AUDIO.md  TODO.txt  Utilities_Guide.md  VIDEO_CLEANUP_SUMMARY.md  VIDEO_HW_ACCEL_FIX.md
hw/: RaspberryPi_Pinout.md  latestcabinet  latestcabinet.md  pinball_dimensions  readme.md  tablelayout.md  wiringPiPinout.txt
rpi_build/: PInball
scripts/: clear_task_history.py  copy_win_dlls.ps1  generate_io_header.py  update_version.py
src/: FontGen.cpp  GLSample2D  GLSample2D.cpp  GLSample3D  GLSample3D.cpp  GLSmall.cpp  OGLCrossCompile  OutputMsgArch.txt  PB3D.cpp  PB3D.h  PBBuildSwitch.h  PBDebounce.cpp  PBDebounce.h  PBDevice.cpp  PBDevice.h  PBGfx.cpp  PBGfx.h  PBLinuxRender.cpp  PBLinuxRender.h  PBOGLES.cpp  PBOGLES.h  PBRasPiRender.h  PBRaspPiRender.cpp  PBSequences.cpp  PBSequences.h  PBSound.cpp  PBSound.h  PBSoundExample.cpp  PBVideo.cpp  PBVideo.h  PBVideoExample.cpp  PBVideoPlayer.cpp  PBVideoPlayer.h  PBWinRender.cpp  PBWinRender.h  PInball.cpp  PInball.h  PInballMenus.h  PInball_IO.cpp  PInball_IO.h  (+15 more)
src/PButils/: FontGen.cpp  pb3dutil.cpp  pblaunch.cpp  pblaunch.desktop  pblistdevices.cpp  pbsetamp.cpp
src/include_ogl/: egl.h  eglplatform.h  gl3.h  gl31.h
src/include_ogl_raspi/: X11FullScreen.cpp  egl.h  eglplatform.h  gl3platform.h
src/include_ogl_win/: egl.h  eglplatform.h  gl31.h
src/lib_ogl_win/: avcodec.lib  avfilter.lib  avutil.lib  libEGL.dll.lib  libGLESv2.dll.lib
src/system/: PB3D.cpp  PB3D.h  PBDebounce.h  PBGfx.cpp  PBGfx.h  PBLinuxRender.cpp  PBOGLES.cpp  PBOGLES.h  PBSound.cpp  PBVideo.cpp  PBWinRender.h  Pinball.cpp  Pinball.h  Pinball_Engine.cpp  Pinball_Engine.h  Pinball_IO.cpp  Pinball_IO.h  Pinball_Table.cpp  Pinball_Table.h  io_defs_generated.h
src/tablemodes/: Pinball_Table_ModeGameEnd.cpp  Pinball_Table_ModeGameEnd.h  Pinball_Table_ModeInit.cpp  Pinball_Table_ModeInit.h  Pinball_Table_ModeMain.cpp  Pinball_Table_ModeReset.cpp  Pinball_Table_ModeReset.h  Pinball_Table_ModeStart.cpp
(+28 files in other folders)
